WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130366
[CSS Shapes] shape-outside: ellipse(50% 50% at) causes crash
https://bugs.webkit.org/show_bug.cgi?id=130366
Summary
[CSS Shapes] shape-outside: ellipse(50% 50% at) causes crash
Hans Muller
Reported
2014-03-17 15:33:48 PDT
Created
attachment 226971
[details]
Test case. An incomplete shape-outside ellipse property value causes a crash: shape-outside: ellipse(50% 50% at)
Attachments
Test case.
(740 bytes, text/html)
2014-03-17 15:33 PDT
,
Hans Muller
no flags
Details
Patch
(8.80 KB, patch)
2014-03-18 09:39 PDT
,
Hans Muller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Muller
Comment 1
2014-03-18 09:39:20 PDT
Created
attachment 227060
[details]
Patch The BasicShape ellipse and circle functions now report a syntax error if the "at" keyword is not followed by a position.
Andreas Kling
Comment 2
2014-03-18 12:43:51 PDT
Comment on
attachment 227060
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-03-18 12:51:26 PDT
Comment on
attachment 227060
[details]
Patch Clearing flags on attachment: 227060 Committed
r165835
: <
http://trac.webkit.org/changeset/165835
>
WebKit Commit Bot
Comment 4
2014-03-18 12:51:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug