[CSS Shapes] shape-outside: ellipse(50% 50% at) causes crash https://bugs.webkit.org/show_bug.cgi?id=130366

Reviewed by Andreas Kling.

Source/WebCore:

The BasicShape ellipse and circle functions now report a syntax error
if the "at" keyword is not followed by a position.

The existing parsing tests have been updated to include this case.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseBasicShapeCircle):
(WebCore::CSSParser::parseBasicShapeEllipse):

LayoutTests:

Added invalid syntax tests for ellipse(.. at), circle(.. at) variations.

* fast/shapes/parsing/parsing-shape-inside-expected.txt:
* fast/shapes/parsing/parsing-shape-outside-expected.txt:
* fast/shapes/parsing/parsing-test-utils.js:


Canonical link: https://commits.webkit.org/148403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165835 268f45cc-cd09-0410-ab3c-d52691b4dbfc