LayoutTests/fast/shapes/parsing/parsing-test-utils.js
@@ -119,6 +119,8 @@ var invalidShapeValues = [
     "circle(at 10px 10px at center)",
     "circle(at center center 10px)",
     "circle(at 10px 10px closest-side)",
+    "circle(10px at)",
+    "circle(at)",
 
     "ellipse(10px 20px 30px)",
     "ellipse(10px at 10px 10px 10px)",
@@ -129,6 +131,8 @@ var invalidShapeValues = [
     "ellipse(at 10px 10px 10px)",
     "ellipse(at 10px 10px at center)",
     "ellipse(at center center 10px)",
+    "ellipse(10px 20px at)",
+    "ellipse(at)",
 
     "polygon()",
     "polygon(evenodd 10px 20px, 30px 40px, 40px 50px)",
